Archive2/f9/705b1bcc68c420/output
main.cpp: In function 'int main()':
main.cpp:6:3: error: 'singleton::~singleton()' is private
   ~singleton(){};
   ^
main.cpp:21:15: error: within this context
     singleton s;
               ^
